fix: wrap icon in div for tippy

--- a/src/css/icons.scss
+++ b/src/css/icons.scss
@@ -220,13 +220,9 @@
 }
 
 
-.icon-n6 {
+.icon-fill-n6 {
     .fill-color {
         fill: var(--N600);
-    }
-
-    .stroke-color {
-        stroke: var(--N600);
     }
 }
 
